2008-08-25  Todd M. Helfter  <tmh@users.sourceforge.net>

	* library/menu.tcl: fix typo from [Bug 1023955]

2008-08-25  Todd M. Helfter <tmh@users.sourceforge.net>

	* library/menu.tcl : Do not flip to the arrow cursor on menus.
	This was a Motif convention.  Current behavior is maintained if
	tk_strictMotif is enabled.  [Bug 1023955]

2008-08-25  Todd M. Helfter <tmh@users.sourceforge.net>

	The patch is associated with the bug tracker id: 1936220
	library/tkfbox.tcl : fix the multiple selection error for
	tk_getOpenFile -multiple 1 which fails on all unix platforms since
	the adoption of ttk widgets.

2008-08-19  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkScroll.c:  Don't use sprintf "%g" to
	format floating point numbers in -[xy]scrollcommand callbacks
	or [xy]view methods.  Minor incompatibility: 0 and 1 now
	formatted as "0.0" resp "1.0".
	* tests/ttk/entry.test, tests/ttk/treeview.test: Updated
	to account for above change.

2008-08-19  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXFont.c (SetFontFeatures):	Disable antialiasing of
						 	fixed-width fonts with
						 	size <= 10.

2008-08-14  Daniel Steffen  <das@users.sourceforge.net>

	*** 8.5.4 TAGGED FOR RELEASE ***

	* unix/tcl.m4 (SC_PATH_X):	check for libX11.dylib in addition to
					libX11.so et al.

	* unix/configure: 		autoconf-2.59

2008-08-08  Don Porter  <dgp@users.sourceforge.net>

	* generic/tk.h:		Bump to 8.5.4 for release.
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Updates for 8.5.4 release.

2008-08-05  Joe English  <jenglish@users.sourceforge.net>

	* generic/tk.h, generic/tkEvent.c: Fix for [Bug 2010422]
	"no event type or button # or keysym while executing
	"bind Listbox <MouseWheel> [...]".

2008-08-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinWm.c: Backported fixes for handling unmapped parent