@@ -1,5 +1,5 @@
 README:  Tk
-    This is the Tk 8.5.4 source distribution.
+    This is the Tk 8.5.5 source distribution.
     Tcl/Tk is also available through NetCVS:
 	http://tcl.sourceforge.net/
     You can get any source release of Tcl from the file distributions
